syntax = "proto3";

package com.strandhvilliam.driveravailability.grpc;

option java_package = "com.strandhvilliam.driveravailability.grpc";
option java_outer_classname = "DriverProto";
option java_multiple_files = true;

service DriverService {
  rpc GetDriverById (DriverIdRequest) returns (DriverResponse);
  rpc GetDriverByEmail (DriverEmailRequest) returns (DriverResponse);
  rpc GetJobByOrderId (OrderIdRequest) returns (JobResponse);
}

message DriverIdRequest {
  string id = 1;
}

message DriverEmailRequest {
  string email = 1;
}

message OrderIdRequest {
  string orderId = 1;
}

message DriverResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  repeated JobResponse jobs = 5;
}

message JobResponse {
  string id = 1;
  string createdAt = 2;
  string driverId = 3;
  string orderId = 4;
  string restaurantId = 5;
  bool completed = 6;
  Coordinates destination = 7;
  Coordinates origin = 8;
  string customerId = 9;
}

message Coordinates {
  double latitude = 1;
  double longitude = 2;
}
